<resources>
    <string name="app_name">A Beer A Day</string>
    <string name="beers">Beers</string>
    <string name="breweries">Breweries</string>
    <string name="rando_beer">Random Beer</string>
    <string name="favorite_beers">Favorite Beers</string>
    <string name="beer_me">Beer Me</string>
    <string name="nav_beer">Beer</string>
    <string name="nav_brewery">Brewery</string>
    <string name="nav_random">Random Beer</string>
    <string name="nav_favorite">Favorites</string>
    <string name="beer_name">Beer Name</string>
    <string name="item_share">Share</string>
    <string name="beer_ingredients">Ingredients</string>
    <string name="list_of_breweries">Found at: Breweries</string>
    <string name="beer_year">Year of Beer</string>
    <string name="beer_organic_status">Organic?</string>
    <string name="favorites_add">Added to favorites!</string>

    <string name="share_beer_text">I love %1$s so much.The ABV is %2$s. It is %3$ss, and it is %4$s.</string>


    <string name="brewery_name">Brewery Name</string>
    <string name="brewery_year">Brewery Established</string>
    <string name="brewery_location">Brewery Location</string>
    <string name="brewery_website">Brewery Website</string>
    <string name="brewery_mail">Brewery Mailing List</string>
    
    <string name="title_activity_list_beer">ListBeer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for fragments for preferences -->
    <string name="beer_filters">Preferences</string>

    <!-- Strings for Beer Year preference -->
    <string name="pref_beer_year_key" translatable="false">pref_beer_year</string>
    <string name="pref_beer_year_title">Beer Year</string>

    <string name="pref_organic_key" translatable="false">Y</string>
    <string name="pref_organic_title">Organic?</string>

    <!-- Strings for Alc % preference -->
    <string name="pref_alc_percentage_key" translatable="false">pref_alc_percentage</string>
    <string name="pref_alc_percentage_title">Alcohol Percentage</string>

    <string name="pref_units_8to10_value" translatable="false">8,10</string>
    <string name="pref_units_lt10_value" translatable="false">-10</string>
    <string name="pref_units_mt10_value" translatable="false">+10</string>
    <string name="pref_units_8to10_entry"> 8% to 10% </string>
    <string name="pref_units_lt10_entry"> Less than 10% </string>
    <string name="pref_units_mt10_entry"> More than 10% </string>
    <string name="pref_units_default_value" translatable="false">@string/pref_units_lt10_value</string>

    <string name="drawer_title">Favorites</string>
    <string name="loading_error">No beers were found! Please adjust preferences in filters!</string>
</resources>