<!-- Vertical Orientation is set  with weightSum-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="4"
    android:orientation="vertical"
    android:gravity="top">

  <!--  <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="#C96E12"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>
    </LinearLayout> -->

    <Button
        android:id="@+id/beers_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/beers"
        android:layout_weight="1"
        android:layout_margin="30dp"
        android:radius="5dp"
        android:backgroundTint="#DF8D03"/>

    <Button
        android:id="@+id/breweries_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/breweries"
        android:layout_weight="1"
        android:layout_margin="30dp"
        android:radius="5dp"
        android:backgroundTint="#EC9D00"/>

    <Button
        android:id="@+id/random_beer_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rando_beer"
        android:layout_weight="1"
        android:layout_margin="30dp"
        android:radius="5dp"
        android:backgroundTint="#F6C101"/>

    <Button
        android:id="@+id/favorites_beer_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_beers"
        android:layout_weight="1"
        android:layout_margin="30dp"
        android:radius="5dp"
        android:backgroundTint="#FAE96F"/>



</LinearLayout>