<!-- Vertical Orientation is set  with weightSum-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="4"
    android:orientation="vertical"
    android:gravity="top">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="#C96E12"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beer_name"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/beer_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/beer_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text= "@string/beer_year"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/beer_organic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text= "@string/beer_organic_status"
        android:radius="5dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/beer_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text= "@string/beer_ingredients"
        android:radius="5dp"
        android:textSize="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/beer_breweries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:radius="5dp"
        android:layout_marginLeft="20dp"
        android:text= "@string/list_of_breweries"
        android:textSize="20dp"/>



    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1" />



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_gravity="bottom"
        app:menu="@menu/nav_items"></com.google.android.material.bottomnavigation.BottomNavigationView>


</LinearLayout>