<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="4"
    android:orientation="vertical"
    android:gravity="top">

    <LinearLayout
        android:id="@+id/brewery_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/brewery_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brewery_name"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/brewery_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text= "@string/beer_organic_status"
        android:radius="5dp"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/brewery_detail_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:radius="5dp"
        android:layout_marginLeft="20dp"
        android:text= "@string/brewery_website"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/brewery_detail_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:radius="5dp"
        android:layout_marginLeft="20dp"
        android:text= "@string/brewery_mail"
        android:textSize="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_gravity="bottom"
        app:menu="@menu/nav_items"></com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>